# pipeview

./: .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  LICENCE.md  README.md
.github/workflows/: cd.yaml  ci.yaml
src/: args.rs  bar.rs  colorizer.rs  constants.rs  lib.rs  main.rs
src/formats/: aim.rs  custom.rs  mod.rs  nginx.rs  traits.rs
src/io/: mod.rs  read.rs  stats.rs  timer.rs  write.rs
test/: demo_countries.csv  demo_nginx_access_log  demo_rsvp_agent_log  flush_fix_integration.rs  generate_inputs.sh
