[package]
edition = "2021"
name = "pipeview"
version = "0.2.2"
description = "🧪 A command line pipe inspection utility."
categories = ["command-line-utilities", "visualization"]
keywords = ["pipe", "meter", "gauge"]
repository = "https://github.com/mihaigalos/pipeview"
license = "MIT"
resolver = "2"

[dependencies]
anyhow = "1.0.75"
autoclap = "0.3.15"
clap = { version = "4.4.0", features = ["string"]}
colored = "2"
dirs = "5"
dotenv = "0.15.0"
indicatif = "0.17.6"
regex = "1.9.3"
serde = "1.0.186"
serde_derive = "1.0.186"
strfmt = "0.2.4"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"
