[package]
edition = "2021"
name = "pipeview"
version = "0.3.0"
description = "🧪 A command line pipe inspection utility."
categories = ["command-line-utilities", "visualization"]
keywords = ["pipe", "meter", "gauge"]
repository = "https://github.com/mihaigalos/pipeview"
license = "MIT"
resolver = "2"

[dependencies]
anyhow = "1.0.75"
atty = "0.2.14"
autoclap = "0.3.15"
clap = { version = "4.4.6", features = ["string", "derive"]}
crossterm = "0.29.0"
colored = "2"
dirs = "5"
dotenv = "0.15.0"
indicatif = "0.18.0"
regex = "1.10.2"
serde = "1.0.189"
serde_derive = "1.0.189"
strfmt = "0.2.4"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.9.0"

[dev-dependencies]
tempfile = "3.8"

[[test]]
name = "flush_fix_integration"
path = "test/flush_fix_integration.rs"
